[gd_scene load_steps=5 format=3 uid="uid://brwftp8w3m6ti"]

[ext_resource type="Script" path="res://scripts/Horse2D.gd" id="1_43hr3"]
[ext_resource type="Texture2D" uid="uid://dc2v5k6mu8rgp" path="res://images/development/pngimg.com - horse_PNG2523.png" id="2_i728c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ffurk"]
size = Vector2(13.25, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mpg1v"]

[node name="Horse2D" type="CharacterBody2D" groups=["lassoable"]]
position = Vector2(-400, 150)
collision_layer = 2
collision_mask = 9
script = ExtResource("1_43hr3")
kickCooldownMax = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 0)
scale = Vector2(4, 3)
shape = SubResource("RectangleShape2D_ffurk")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.104, 0.104)
texture = ExtResource("2_i728c")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 12

[node name="HoldArea" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(4, 3)
shape = SubResource("RectangleShape2D_mpg1v")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
